--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -16,7 +16,7 @@
     </div>
 </section>
 
-<div class="container my-5 category-page">
+<div class="container my-5 category-page home-page">
     <div class="category-layout">
         <aside class="category-sidebar">
             <div class="card shadow-sm border-0">
