--- a/store/templates/store/product_list.html
+++ b/store/templates/store/product_list.html
@@ -95,6 +95,16 @@
                                 <p class="product-brand">{{ instrument.brand }}</p>
                                 <h3 class="product-name">{{ instrument.name }}</h3>
                                 <p class="product-category">{{ instrument.category.name }}</p>
+                                <div class="product-rating mb-2">
+                                    {% for i in "12345" %}
+                                    {% if forloop.counter <= instrument.rating %} <i class="fas fa-star text-warning"></i>
+                                        {% elif forloop.counter|add:"-0.5" <= instrument.rating %} <i class="fas fa-star-half-alt text-warning"></i>
+                                            {% else %}
+                                            <i class="far fa-star text-warning"></i>
+                                            {% endif %}
+                                            {% endfor %}
+                                            <span class="text-muted small ms-1">({{ instrument.rating }})</span>
+                                </div>
                                 <p class="product-price">${{ instrument.price }}</p>
                             </div>
                         </a>
