--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -35,6 +35,10 @@
                             <input type="text" name="search" placeholder="Search instruments..." value="{{ search_query|default:'' }}">
                             <button type="submit"><i class="fas fa-search"></i></button>
                         </form>
+                        <a href="#" class="cart-button">
+                            <i class="fas fa-shopping-cart"></i>
+                            <span class="cart-count">0</span>
+                        </a>
                     </div>
                 </div>
             </div>
