--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -35,9 +35,9 @@
                             <input type="text" name="search" placeholder="Search instruments..." value="{{ search_query|default:'' }}">
                             <button type="submit"><i class="fas fa-search"></i></button>
                         </form>
-                        <a href="#" class="cart-button">
+                        <a href="{% url 'cart_view' %}" class="cart-button">
                             <i class="fas fa-shopping-cart"></i>
-                            <span class="cart-count">0</span>
+                            <span class="cart-count">{{ cart_item_count|default:0 }}</span>
                         </a>
                     </div>
                 </div>
