--- a/store/templates/store/amps_effects.html
+++ b/store/templates/store/amps_effects.html
@@ -18,7 +18,7 @@
             <div class="card h-100 shadow-sm hover-card">
                 <a href="{% url 'product_detail' instrument.slug %}" class="text-decoration-none">
                     {% if instrument.image %}
-                    <img src="{{ instrument.image.url }}" class="card-img-top" alt="{{ instrument.name }}" style="height: 250px; object-fit: cover;">
+                    <img src="{{ instrument.image_display_url }}" class="card-img-top" alt="{{ instrument.name }}" style="height: 250px; object-fit: cover;">
                     {% else %}
                     <div class="card-img-top bg-light d-flex align-items-center justify-content-center" style="height: 250px;">
                         <i class="fas fa-volume-up fa-5x text-secondary"></i>
