--- a/store/templates/store/horns.html
+++ b/store/templates/store/horns.html
@@ -134,7 +134,7 @@
                     <div class="card h-100 shadow-sm hover-card position-relative">
                         <a href="{% url 'product_detail' instrument.slug %}" class="text-decoration-none">
                             {% if instrument.image %}
-                            <img src="{{ instrument.image.url }}" class="card-img-top" alt="{{ instrument.name }}" style="height: 230px; object-fit: cover;">
+                            <img src="{{ instrument.image_display_url }}" class="card-img-top" alt="{{ instrument.name }}" style="height: 230px; object-fit: cover;">
                             {% else %}
                             <div class="card-img-top bg-light d-flex align-items-center justify-content-center" style="height: 230px;">
                                 <i class="fas fa-trumpet fa-4x text-secondary"></i>
